--- a/textures/Makefile
+++ b/textures/Makefile
@@ -1,4 +1,4 @@
-OBJS := cursor.h dialog.h font_large_dat.h font_large.h font_mono_dat.h font_mono.h font_normal_dat.h font_normal.h menu.h
+OBJS := cursor.h dialog.h font_large_dat.h font_large.h font_mono_dat.h font_mono.h font_normal_dat.h font_normal.h message.h
 
 all: $(OBJS)
 
